@@ -32,7 +32,7 @@ class evio_output : public outputFactory
 	void writeGenerated(outputContainer*, vector<generatedParticle>, map<string, gBank> *banksMap);
 
 	// write RF Signal
-	virtual void writeRFSignal(outputContainer*, vector<double>, vector<double>, gBank);
+	virtual void writeRFSignal(outputContainer*, FrequencySyncSignal, gBank);
 
 	// write geant4 raw integrated info
 	void writeG4RawIntegrated(outputContainer*, vector<hitOutput>,  string, map<string, gBank>*);
